[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/whitedragon.png" type="Texture" id=1]
[ext_resource path="res://dragon.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.99798
height = 132.515

[sub_resource type="Animation" id=2]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damage/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shootsense/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "rush"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damage/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 15.6836

[sub_resource type="CircleShape2D" id=6]
radius = 6.79496

[sub_resource type="CircleShape2D" id=12]
radius = 24.9782

[sub_resource type="CircleShape2D" id=13]
radius = 24.5884

[sub_resource type="CircleShape2D" id=8]
radius = 743.284

[sub_resource type="CircleShape2D" id=9]
radius = 149.411

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4.48765, 9.33334 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 1.50396, 26.0762 )

[node name="dragon" type="KinematicBody2D"]
rotation = 1.5708
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.968559, 0.301901 )
rotation = -1.5708
texture = ExtResource( 1 )
hframes = 6
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.55477, 0.581135 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/run = SubResource( 3 )
anims/rush = SubResource( 4 )

[node name="Bar" type="ColorRect" parent="."]
margin_left = -20.4424
margin_top = -0.816976
margin_right = 43.5576
margin_bottom = 1.18302
color = Color( 0.952941, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -2.51826, 0.387424 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -23.6669, 18.9336 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -23.5092, -18.1447 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -8.63732, 52.4549 )
rotation = 0.380482
shape = SubResource( 12 )
one_way_collision_margin = 0.0

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -7.46888, -49.8807 )
rotation = -0.380482
shape = SubResource( 13 )

[node name="sense" type="Area2D" parent="."]
visible = false
light_mask = 8
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense"]
light_mask = 8
shape = SubResource( 8 )

[node name="shootsense" type="Area2D" parent="."]
light_mask = 8
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootsense"]
position = Vector2( -0.0637546, 0.263521 )
shape = SubResource( 9 )

[node name="damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
position = Vector2( 70.5978, 0.672062 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="damage"]
position = Vector2( 18.6874, -40.0026 )
rotation = 0.383972
shape = SubResource( 11 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="damage"]
position = Vector2( 18.3954, 42.6305 )
rotation = -0.383972
shape = SubResource( 11 )

[node name="timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="mouth" type="Position2D" parent="."]
position = Vector2( 80.3149, 0.304443 )

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.001

[node name="bullet" type="Node" parent="."]
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="shootsense" to="." method="_on_shootsense_body_entered"]
[connection signal="body_exited" from="shootsense" to="." method="_on_shootsense_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
